exports[`component:Issue snapshots only shows the first five items 1`] = `
<section
  className="o-expandable aggregation">
  <div
    className="o-expandable_header o-expandable_target">
    <h5
      className="o-expandable_header-left o-expandable_label">
      Issue / sub-issue
    </h5>
    <span
      className="o-expandable_header-right o-expandable_link">
      <button
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}>
        Hide
        <span
          className="cf-icon cf-icon-minus-round" />
      </button>
    </span>
  </div>
  <p>
    The type of issue and sub-issue the consumer identified in the complaint
  </p>
  <section
    className="typeahead "
    onBlur={[Function]}
    onFocus={[Function]}>
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter name of issue"
      type="text"
      value="" />
  </section>
  <div>
    <ul>
      <div
        className="aggregation-branch">
        <li
          className="flex-fixed layout-row parent m-form-field m-form-field__checkbox">
          <input
            aria-label="Incorrect information on credit report"
            checked={false}
            className="flex-fixed a-checkbox"
            id="issueIncorrectinformation on credit report"
            onChange={[Function]}
            type="checkbox" />
          <label
            className="flex-all toggle a-label"
            htmlFor="issueIncorrectinformation on credit report">
            <button
              className="a-btn a-btn__link hover"
              onClick={[Function]}>
              <span>
                Incorrect information on credit report
              </span>
              <span
                className="cf-icon cf-icon-down" />
            </button>
          </label>
          <span
            className="flex-fixed parent-count">
            <span>
              20,991
            </span>
          </span>
        </li>
      </div>
      <div
        className="aggregation-branch">
        <li
          className="flex-fixed layout-row parent m-form-field m-form-field__checkbox">
          <input
            aria-label="Cont\'d attempts collect debt not owed"
            checked={false}
            className="flex-fixed a-checkbox"
            id="issueCont\'dattempts collect debt not owed"
            onChange={[Function]}
            type="checkbox" />
          <label
            className="flex-all toggle a-label"
            htmlFor="issueCont\'dattempts collect debt not owed">
            <button
              className="a-btn a-btn__link hover"
              onClick={[Function]}>
              <span>
                Cont\'d attempts collect debt not owed
              </span>
              <span
                className="cf-icon cf-icon-down" />
            </button>
          </label>
          <span
            className="flex-fixed parent-count">
            <span>
              17,244
            </span>
          </span>
        </li>
      </div>
      <li
        className="flex-fixed layout-row m-form-field m-form-field__checkbox">
        <input
          aria-label="Loan servicing, payments, escrow account"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueLoanservicing, payments, escrow account"
          onChange={[Function]}
          type="checkbox" />
        <label
          className="a-label flex-all bucket-key"
          htmlFor="issueLoanservicing, payments, escrow account">
          Loan servicing, payments, escrow account
        </label>
        <span
          className="flex-fixed bucket-count">
          <span>
            14,605
          </span>
        </span>
      </li>
      <li
        className="flex-fixed layout-row m-form-field m-form-field__checkbox">
        <input
          aria-label="Loan modification,collection,foreclosure"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueLoanmodification,collection,foreclosure"
          onChange={[Function]}
          type="checkbox" />
        <label
          className="a-label flex-all bucket-key"
          htmlFor="issueLoanmodification,collection,foreclosure">
          Loan modification,collection,foreclosure
        </label>
        <span
          className="flex-fixed bucket-count">
          <span>
            10,716
          </span>
        </span>
      </li>
      <li
        className="flex-fixed layout-row m-form-field m-form-field__checkbox">
        <input
          aria-label="Dealing with my lender or servicer"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueDealingwith my lender or servicer"
          onChange={[Function]}
          type="checkbox" />
        <label
          className="a-label flex-all bucket-key"
          htmlFor="issueDealingwith my lender or servicer">
          Dealing with my lender or servicer
        </label>
        <span
          className="flex-fixed bucket-count">
          <span>
            7,783
          </span>
        </span>
      </li>
    </ul>
    <div
      className="flex-fixed">
      <button
        className="a-btn a-btn__link hover more"
        onClick={[Function]}>
        + Show 
        1
         
        more
      </button>
    </div>
  </div>
</section>
`;

exports[`component:Issue snapshots renders without crashing 1`] = `
<section
  className="o-expandable aggregation">
  <div
    className="o-expandable_header o-expandable_target">
    <h5
      className="o-expandable_header-left o-expandable_label">
      Issue / sub-issue
    </h5>
    <span
      className="o-expandable_header-right o-expandable_link">
      <button
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}>
        Hide
        <span
          className="cf-icon cf-icon-minus-round" />
      </button>
    </span>
  </div>
  <p>
    The type of issue and sub-issue the consumer identified in the complaint
  </p>
  <section
    className="typeahead "
    onBlur={[Function]}
    onFocus={[Function]}>
    <input
      autoComplete="off"
      className="a-text-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Enter name of issue"
      type="text"
      value="" />
  </section>
  <div>
    <ul />
  </div>
</section>
`;
